--- a/HomeTask3/task1Style.css
+++ b/HomeTask3/task1Style.css
@@ -2,16 +2,17 @@
     line-height: (needed)px; 
     text-align: center;
     margin-bottom: 10px;
+    padding: 10px;
 }
 
 .headerStyle{
     background-color: #DD8705;
     color: #FDFD2E;
+    padding: 3px;
 }
-
-.sectionStyle  {
-    content: "";
-    display: table;
-    clear: both;
-    width: 50%;
+div ul li{
+    display: inline;
+    font-size: 20px;
+    padding-right: 25px;
+    color: #FDFD2E;
 }
